MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/Commission_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Commission Payout Items</label>
    <nameField>
        <displayFormat>CLIM-{0000}</displayFormat>
        <label>Commission Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>