MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Commission_Line__c.field-meta.xml
<CustomField>
    <fullName>Commission_Line__c</fullName>
    <label>Commission Line</label>
    <referenceTo>Commission_Line__c</referenceTo>
    <relationshipLabel>Commission Payout Lines</relationshipLabel>
    <relationshipName>Commission_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>