MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Commission_Month__c.field-meta.xml
<CustomField>
    <fullName>Commission_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>