MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Commission_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payout_Amount__c</fullName>
    <label>Commission Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>