MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Commission_Payout_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payout_Percent__c</fullName>
    <label>Commission Payout Percent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>