MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/EBS_COMMISSION_PAID_DATE__c.field-meta.xml
<CustomField>
    <fullName>EBS_COMMISSION_PAID_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS COMMISSION PAID DATE</label>
    <type>Date</type>
</CustomField>