MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/EBS_COMMISSION_PAID_STATUS__c.field-meta.xml
<CustomField>
    <fullName>EBS_COMMISSION_PAID_STATUS__c</fullName>
    <label>EBS COMMISSION PAID STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>CLEARED</fullName>
            </value>
            <value>
                <fullName>VOIDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>