MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Installment_No__c.field-meta.xml
<CustomField>
    <fullName>Installment_No__c</fullName>
    <label>Installment No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>