MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Payout_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Payout_Based_On__c</fullName>
    <label>Payout Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Down Payment Cleared</fullName>
            </value>
            <value>
                <fullName>SPA Signed (Customer)</fullName>
            </value>
            <value>
                <fullName>SPA Signed (Modon)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>