MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Sales_Order_Equity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Equity__c</fullName>
    <formula>Commission_Line__r.Equity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>