MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total Gross Sales</fullName>
            </value>
            <value>
                <fullName>Direct Commission</fullName>
            </value>
            <value>
                <fullName>Direct - Referral Commission</fullName>
            </value>
            <value>
                <fullName>Indirect Commission</fullName>
            </value>
            <value>
                <fullName>Indirect - Internal Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>