MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/Total_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Amount__c</fullName>
    <formula>Commission_Line__r.Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>