MODON MRE BPDEV/force-app/main/default/objects/Commission_Line_Item__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>